--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
 body {
-	background-color: red
+	background-color: aquamarine;
+}
+
+div {
+	margin-bottom: 5px;
+}
+#kolory-predefiniowane {
+	width: 200px;
+	height: 100px;
+	background-color: red;
+}
+
+#kolory-heksadecymalne {
+	width: 200px;
+	height: 100px;
+	background-color: #ffff55;
+}
+
+#kolory-heksadecymalne-zapis-skrocony {
+	width: 200px;
+	height: 100px;
+	background-color: #f75;
+}
+
+#kolory-funkcja-rgb {
+	width: 200px;
+	height: 100px;
+	background-color: rgb(51,145,13);
+}
+
+#kolory-funkcja-rgba {
+	width: 200px;
+	height: 100px;
+	background-color: rgba(51,145,13,0.5);
 }
